adjusted routes, removed html foler files, moved html files to templates, worked on rendering data with ES6Renderer

--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Anchor Chart</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
         <div class="d-flex justifty-content-around">
           <ul class="navbar-nav nav-justified lh-1 align-items-center">
           <li class="nav-item">
-            <a href="../cart_page/cart.html" class="nav-link d-flex flex-column">
+            <a href="./cart.html" class="nav-link d-flex flex-column">
               <i class="bi bi-cart-fill nav-icon">
                 <span class="d-none d-sm-inline nav-text">
                   Your Shopping Cart:
@@ -46,19 +46,19 @@
         <h2 class="company-title">Anchor Chart</h2>
         <ul class="navbar-nav justify-content-around align-items-center flex-row mt-5 border-bottom d-flex p-5">
             <li class="nav-item">
-                <a href="../landing_page/landing_page.html" class="nav-link"><h4>Home</h4></a>
+                <a href="./landing_page.html" class="nav-link"><h4>Home</h4></a>
             </li>
               <li class="nav-item">
-                <a href="../shopping_page/shopping_page.html" class="nav-link"><h4>Shop</h4></a>
+                <a href="./shopping_page.html" class="nav-link"><h4>Shop</h4></a>
             </li>
               <li class="nav-item">
-                <a href="../account_page/account_page.html" class="nav-link"><h4>My Account</h4></a>
+                <a href="./account_page.html" class="nav-link"><h4>My Account</h4></a>
             </li>
               <li class="nav-item">
-                <a href="../cart_page/cart.html" class="nav-link"><h4>Cart</h4></a>
+                <a href="./cart.html" class="nav-link"><h4>Cart</h4></a>
             </li>
         </ul>
-        <h1 class="section-title border-bottom d-flex p-5">Shopping Cart</h1>
+        <h1 class="section-title border-bottom d-flex p-5">My Account</h1>
         </div>
         <h1>Under Construction 👷</h1>
     <script
@@ -66,6 +66,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="../index.js"></script> -->
+  
   </body>
 </html>
