--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../../index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Anchor Chart</title>
   </head>
   <body>
@@ -32,10 +32,7 @@
         <div class="d-flex justifty-content-around">
           <ul class="navbar-nav nav-justified lh-1 align-items-center">
             <li class="nav-item">
-              <a
-                href="../cart_page/cart.html"
-                class="nav-link d-flex flex-column"
-              >
+              <a href="./cart.html" class="nav-link d-flex flex-column">
                 <i class="bi bi-cart-fill nav-icon">
                   <span class="d-none d-sm-inline nav-text">
                     Your Shopping Cart:
@@ -72,12 +69,10 @@
           >
         </li> -->
         <li class="nav-item">
-          <a href="../account_page/account_page.html" class="nav-link"
-            ><h4>My Account</h4></a
-          >
+          <a href="./account_page.html" class="nav-link"><h4>My Account</h4></a>
         </li>
         <li class="nav-item">
-          <a href="../cart_page/cart.html" class="nav-link"><h4>Cart</h4></a>
+          <a href="/cart.html" class="nav-link"><h4>Cart</h4></a>
         </li>
       </ul>
       <h1 class="section-title border-bottom d-flex p-5">Home</h1>
@@ -187,6 +182,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="./userRegLogin.js"></script>
-    <!-- <script src="../index.js"></script> -->
   </body>
 </html>
