--- a/templates/shopping_page.html
+++ b/templates/shopping_page.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="./index.css" />
     <title>Anchor Chart</title>
   </head>
   <body>
@@ -31,62 +31,73 @@
         </form> -->
         <div class="d-flex justifty-content-around">
           <ul class="navbar-nav nav-justified lh-1 align-items-center">
-          <li class="nav-item">
-            <a href="../cart_page/cart.html" class="nav-link d-flex flex-column">
-              <i class="bi bi-cart-fill nav-icon">
-                <span class="d-none d-sm-inline nav-text">
-                  Your Shopping Cart:
-                </span>
-              </i>
-            </a>
-          </li>
+            <li class="nav-item">
+              <a href="./cart.html" class="nav-link d-flex flex-column">
+                <i class="bi bi-cart-fill nav-icon">
+                  <span class="d-none d-sm-inline nav-text">
+                    Your Shopping Cart:
+                  </span>
+                </i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
     <div class="container">
-        <h2 class="company-title">Anchor Chart</h2>
-        <ul class="navbar-nav justify-content-around align-items-center flex-row mt-5 border-bottom d-flex p-5">
-            <li class="nav-item">
-                <a href="../landing_page/landing_page.html" class="nav-link"><h4>Home</h4></a>
-            </li>
-              <li class="nav-item">
-                <a href="../shopping_page/shopping_page.html" class="nav-link"><h4>Shop</h4></a>
-            </li>
-              <li class="nav-item">
-                <a href="../account_page/account_page.html" class="nav-link"><h4>My Account</h4></a>
-            </li>
-              <li class="nav-item">
-                <a href="../cart_page/cart.html" class="nav-link"><h4>Cart</h4></a>
-            </li>
-        </ul>
-        <h1 class="section-title border-bottom d-flex p-5">Shop</h1>
+      <h2 class="company-title">Anchor Chart</h2>
+      <ul
+        class="
+          navbar-nav
+          justify-content-around
+          align-items-center
+          flex-row
+          mt-5
+          border-bottom
+          d-flex
+          p-5
+        "
+      >
+        <li class="nav-item">
+          <a href="/landing_page" class="nav-link"><h4>Home</h4></a>
+        </li>
+        <li class="nav-item">
+          <a href="./shopping_page.html" class="nav-link"><h4>Shop</h4></a>
+        </li>
+        <li class="nav-item">
+          <a href="./account_page.html" class="nav-link"><h4>My Account</h4></a>
+        </li>
+        <li class="nav-item">
+          <a href="./cart.html" class="nav-link"><h4>Cart</h4></a>
+        </li>
+      </ul>
+      <h1 class="section-title border-bottom d-flex p-5">Shop</h1>
+    </div>
+    <div class="container d-flex justify-content-center flex-column">
+      <a href="#" class="btn btn-success hidden col-2 admin-login"
+        >Add anchorChart</a
+      >
+      ${anchorCharts.map(anchorChart => `
+      <div class="card" style="width: 20rem">
+        <img src="${anchorChart.image}" alt="" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title">${anchorChart.topic}</h5>
+          <p class="card-text">${anchorChart.subject}</p>
+          <p class="card-text">${anchorChart.grade}</p>
+          <p class="card-text">$${anchorChart.price}</p>
+          <span>
+            <a href="#" class="btn btn-primary">add to cart</a>
+            <a href="#" class="btn btn-warning hidden admin-login">update</a>
+            <a href="#" class="btn btn-danger hidden admin-login">delete</a>
+          </span>
         </div>
-        <div class="container d-flex justify-content-center flex-column">
-                    <a href="#" class="btn btn-success hidden col-2 admin-login">Add anchorChart</a>
-            <div class="card" style="width: 20rem;">
-              <h1>${anchorCharts.subject}</h1>
-        ${anchorCharts.map(anchorChart => `
-            <!-- <img src=`${anchorChart.image}` alt="" class="card-img-top"> -->
-            <div class="card-body">
-              <h5 class="card-title">${anchorChart.topic}</h5>
-              <p class="card-text">${anchorChart.subject}</p>
-              <p class="card-text">${anchorChart.grade}</p>
-              <p class="card-text">${anchorChart.price}</p>
-              <span>
-                <a href="#" class="btn btn-primary">add to cart</a>
-                <a href="#" class="btn btn-warning hidden admin-login">update</a>
-                <a href="#" class="btn btn-danger hidden admin-login">delete</a>
-              </span>
-            </div>
-        `).join('')}
-        </div>
-
-        </div>
+      </div>
+      `).join('')}
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./shop.js"></script>
-    <!-- <script src="../index.js"></script> -->
   </body>
 </html>
