--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
     <title>Anchor Chart</title>
   </head>
   <body>
