--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -20,15 +20,6 @@
   <body>
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
-        <!-- <form class="d-flex">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-primary" type="submit">Search</button>
-        </form> -->
         <div class="d-flex justifty-content-around">
           <ul class="navbar-nav nav-justified lh-1 align-items-center">
             <li class="nav-item">
@@ -62,7 +53,7 @@
           <a href="/landing_page" class="nav-link"><h4>Home</h4></a>
         </li>
         <li class="nav-item">
-          <a href="./shopping_page.html" class="nav-link"><h4>Shop</h4></a>
+          <a href="/shoppingpage" class="nav-link"><h4>Shop</h4></a>
         </li>
         <li class="nav-item">
           <a href="./account_page.html" class="nav-link"><h4>My Account</h4></a>
@@ -71,24 +62,92 @@
           <a href="./cart.html" class="nav-link"><h4>Cart</h4></a>
         </li>
       </ul>
-      <h1 class="section-title border-bottom d-flex p-5">Shop</h1>
+      <h1 class="section-title border-bottom d-flex p-5">
+        Welcome to the admin page
+      </h1>
     </div>
     <div class="container d-flex justify-content-center flex-column">
+      <a
+        href="#"
+        class="btn btn-success col-4 mb-2"
+        data-bs-toggle="modal"
+        data-bs-target="#addAnchorModal"
+        >Add anchorChart</a
+      >
+
       ${anchorCharts.map(anchorChart => `
       <div class="card" style="width: 20rem">
         <img src="${anchorChart.image}" alt="" class="card-img-top" />
         <div class="card-body">
-          <h5 class="card-title">${anchorChart.topic}</h5>
-          <p class="card-text">${anchorChart.subject}</p>
-          <p class="card-text">${anchorChart.grade}</p>
-          <p class="card-text">$${anchorChart.price}</p>
+          <h5 class="card-title text-center">${anchorChart.topic}</h5>
+          <p class="card-text">Subject: ${anchorChart.subject}</p>
+          <p class="card-text">Grade: ${anchorChart.grade}</p>
+          <p class="card-text">Price: $${anchorChart.price}</p>
           <span>
-            <a href="#" class="btn btn-primary">add to cart</a>
+            <a href="#" class="btn btn-warning">update</a>
+            <a href="#" class="btn btn-danger">delete</a>
           </span>
         </div>
       </div>
       `).join('')}
     </div>
+
+    <!-- Add anchorChart Modal -->
+    <div
+      class="modal fade"
+      id="addAnchorModal"
+      tabindex="-1"
+      aria-labelledby="addAnchorModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addAnchorModalLabel">
+              Add anchorChart
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+  <div class="row mb-3">
+    <label for="inputSubject" class="col-sm-2 col-form-label">Subject</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputSubject">
+    </div>
+  </div>
+  <div class="row mb-3">
+    <label for="inputGrade" class="col-sm-2 col-form-label">Grade</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputGrade">
+    </div>
+  </div>
+    <div class="row mb-3">
+    <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputPrice">
+    </div>
+  </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
