--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-    />
-    <link rel="stylesheet" type="text/css" href="styles/index.css" />
-    <title>Anchor Chart</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-        <div class="d-flex justifty-content-around">
-          <ul class="navbar-nav nav-justified lh-1 align-items-center">
-            <li class="nav-item">
-              <a href="./cart.html" class="nav-link d-flex flex-column">
-                <i class="bi bi-cart-fill nav-icon">
-                  <span class="d-none d-sm-inline nav-text">
-                    Your Shopping Cart:
-                  </span>
-                </i>
-              </a>
-            </li>
-          </ul>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" type="text/css" href="styles/index.css" />
+  <title>Anchor Chart</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <div class="d-flex justifty-content-around">
+        <ul class="navbar-nav nav-justified lh-1 align-items-center">
+          <li class="nav-item">
+            <a href="./cart.html" class="nav-link d-flex flex-column">
+              <i class="bi bi-cart-fill nav-icon">
+                <span class="d-none d-sm-inline nav-text">
+                  Your Shopping Cart:
+                </span>
+              </i>
+            </a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <div class="container">
-      <h2 class="company-title">Anchor Chart</h2>
-      <ul
-        class="
+    </div>
+  </nav>
+  <div class="container">
+    <h2 class="company-title">Anchor Chart</h2>
+    <ul class="
           navbar-nav
           justify-content-around
           align-items-center
@@ -47,209 +41,160 @@
           border-bottom
           d-flex
           p-5
-        "
-      >
-        <li class="nav-item">
-          <a href="/landing_page" class="nav-link"><h4>Home</h4></a>
-        </li>
-        <li class="nav-item">
-          <a href="/shoppingpage" class="nav-link"><h4>Shop</h4></a>
-        </li>
-        <li class="nav-item">
-          <a href="./account_page.html" class="nav-link"><h4>My Account</h4></a>
-        </li>
-        <li class="nav-item">
-          <a href="./cart.html" class="nav-link"><h4>Cart</h4></a>
-        </li>
-      </ul>
-      <h1 class="section-title border-bottom d-flex p-5">
-        Welcome to the admin page
-      </h1>
-    </div>
-    <div class="container d-flex justify-content-center flex-column">
-      <a
-        href="#"
-        class="btn btn-success col-4 mb-2"
-        data-bs-toggle="modal"
-        data-bs-target="#addAnchorModal"
-        >Add anchorChart</a
-      >
+        ">
+      <li class="nav-item">
+        <a href="/landing_page" class="nav-link">
+          <h4>Home</h4>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/shoppingpage" class="nav-link">
+          <h4>Shop</h4>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="./account_page.html" class="nav-link">
+          <h4>My Account</h4>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="./cart.html" class="nav-link">
+          <h4>Cart</h4>
+        </a>
+      </li>
+    </ul>
+    <h1 class="section-title border-bottom d-flex p-5">
+      Welcome to the admin page
+    </h1>
+  </div>
+  <div class="container d-flex justify-content-center flex-column">
+    <a href="#" class="btn btn-success col-4 mb-2" data-bs-toggle="modal" data-bs-target="#addAnchorModal">Add
+      anchorChart</a>
 
-      ${anchorCharts.map(anchorChart => `
-      <div class="card" style="width: 20rem">
-        <img src="${anchorChart.image}" alt="" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title text-center">${anchorChart.topic}</h5>
-          <p class="card-text">Subject: ${anchorChart.subject}</p>
-          <p class="card-text">Grade: ${anchorChart.grade}</p>
-          <p class="card-text">Price: $${anchorChart.price}</p>
-          <span>
-            <a
-              href="#"
-              class="btn btn-warning"
-              data-bs-toggle="modal"
-              data-bs-target="#updateAnchorModal"
-              id="updateBtn"
-              >update</a
-            >
-            <a href="#" class="btn btn-danger" id="deleteAnchorBtn">delete</a>
-          </span>
-        </div>
+    ${anchorCharts.map(anchorChart => `
+    <div class="card" style="width: 20rem">
+      <img src="${anchorChart.image}" alt="" class="card-img-top" />
+      <div class="card-body">
+        <h5 class="card-title text-center">${anchorChart.topic}</h5>
+        <p class="card-text">Subject: ${anchorChart.subject}</p>
+        <p class="card-text">Grade: ${anchorChart.grade}</p>
+        <p class="card-text">Price: $${anchorChart.price}</p>
+        <span>
+          <a href="#" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#updateAnchorModal"
+            id="updateBtn">update</a>
+          <button href="#" class="btn btn-danger" id=deleteAnchorBtn
+            onClick=deleteAnchorChart(${anchorChart.id})>delete</button>
+        </span>
       </div>
-      `).join('')}
     </div>
+    `).join('')}
+  </div>
 
-    <!-- Add anchorChart Modal -->
-    <div
-      class="modal fade"
-      id="addAnchorModal"
-      tabindex="-1"
-      aria-labelledby="addAnchorModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="addAnchorModalLabel">
-              Add anchorChart
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="row mb-3">
-                <label for="inputTopic" class="col-sm-2 col-form-label"
-                  >Topic</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputTopic" />
-                </div>
+  <!-- Add anchorChart Modal -->
+  <div class="modal fade" id="addAnchorModal" tabindex="-1" aria-labelledby="addAnchorModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addAnchorModalLabel">
+            Add anchorChart
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="row mb-3">
+              <label for="inputTopic" class="col-sm-2 col-form-label">Topic</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputTopic" />
               </div>
-              <div class="row mb-3">
-                <label for="inputSubject" class="col-sm-2 col-form-label"
-                  >Subject</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputSubject" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputSubject" class="col-sm-2 col-form-label">Subject</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSubject" />
               </div>
-              <div class="row mb-3">
-                <label for="inputGrade" class="col-sm-2 col-form-label"
-                  >Grade</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputGrade" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputGrade" class="col-sm-2 col-form-label">Grade</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputGrade" />
               </div>
-              <div class="row mb-3">
-                <label for="inputPrice" class="col-sm-2 col-form-label"
-                  >Price</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputPrice" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputPrice" />
               </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary" id="addAnchorBtn">
-              Add anchorChart
-            </button>
-          </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary" id="addAnchorBtn">
+            Add anchorChart
+          </button>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Update anchorChart Modal -->
-    <div
-      class="modal fade"
-      id="updateAnchorModal"
-      tabindex="-1"
-      aria-labelledby="updateAnchorModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="updateAnchorModalLabel">
-              Update anchorChart
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="row mb-3">
-                <label for="inputTopic" class="col-sm-2 col-form-label"
-                  >Topic</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputTopic" />
-                </div>
+  <!-- Update anchorChart Modal -->
+  <div class="modal fade" id="updateAnchorModal" tabindex="-1" aria-labelledby="updateAnchorModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="updateAnchorModalLabel">
+            Update anchorChart
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="row mb-3">
+              <label for="inputTopic" class="col-sm-2 col-form-label">Topic</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputTopic" />
               </div>
-              <div class="row mb-3">
-                <label for="inputSubject" class="col-sm-2 col-form-label"
-                  >Subject</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputSubject" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputSubject" class="col-sm-2 col-form-label">Subject</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSubject" />
               </div>
-              <div class="row mb-3">
-                <label for="inputGrade" class="col-sm-2 col-form-label"
-                  >Grade</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputGrade" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputGrade" class="col-sm-2 col-form-label">Grade</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputGrade" />
               </div>
-              <div class="row mb-3">
-                <label for="inputPrice" class="col-sm-2 col-form-label"
-                  >Price</label
-                >
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputPrice" />
-                </div>
+            </div>
+            <div class="row mb-3">
+              <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputPrice" />
               </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary" id="updateAnchorBtn">
-              Update anchorChart
-            </button>
-          </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary" id="updateAnchorBtn">
+            Update anchorChart
+          </button>
         </div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/admin.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="/admin.js"></script>
+</body>
+
 </html>
