--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -80,8 +80,8 @@
         <p class="card-text">Grade: ${anchorChart.grade}</p>
         <p class="card-text">Price: $${anchorChart.price}</p>
         <span>
-          <a href="#" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#updateAnchorModal"
-            id="updateBtn">update</a>
+          <a href="#" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#updateAnchorModal" id="updateBtn"
+            onclick=updateAnchorChart(${anchorChart.id})>update</a>
           <button href="#" class="btn btn-danger" id=deleteAnchorBtn
             onClick=deleteAnchorChart(${anchorChart.id})>delete</button>
         </span>
@@ -156,25 +156,25 @@
             <div class="row mb-3">
               <label for="inputTopic" class="col-sm-2 col-form-label">Topic</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputTopic" />
+                <input type="text" class="form-control" id="topicField" value="" />
               </div>
             </div>
             <div class="row mb-3">
               <label for="inputSubject" class="col-sm-2 col-form-label">Subject</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSubject" />
+                <input type="text" class="form-control" id="subjectField" />
               </div>
             </div>
             <div class="row mb-3">
               <label for="inputGrade" class="col-sm-2 col-form-label">Grade</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputGrade" />
+                <input type="text" class="form-control" id="gradeField" />
               </div>
             </div>
             <div class="row mb-3">
               <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputPrice" />
+                <input type="text" class="form-control" id="priceField" />
               </div>
             </div>
           </form>
