--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -174,7 +174,7 @@
             <div class="row mb-3">
               <label for="inputPrice" class="col-sm-2 col-form-label">Price</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="priceField" />
+                <input type="number" class="form-control" id="priceField" />
               </div>
             </div>
           </form>
@@ -183,7 +183,7 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Close
           </button>
-          <button type="button" class="btn btn-primary" id="updateAnchorBtn">
+          <button type="button" class="btn btn-primary" id="updateAnchorButton" onclick='updateModalButton()'>
             Update anchorChart
           </button>
         </div>
